--- a/src/views/product/viewProduct.ejs
+++ b/src/views/product/viewProduct.ejs
@@ -1,102 +1,112 @@
 <div class="d-flex justify-content-between flex-wrap flex-md nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">Product</h1>
-    <div class="col-md-3">  
-    </div>
-    <div class="btn-toolbar mb-2 mb-md 0">
-      <div class="btn-group me-2">
-        <a href="/home/product/new" class="btn btn-sm btn-outline-secondary">+ New Product</a>
-      </div>
+  <h1 class="h2">Product</h1>
+  <div class="col-md-3">
+  </div>
+  <div class="btn-toolbar mb-2 mb-md 0">
+    <div class="btn-group me-2">
+      <a href="/home/product/new" class="btn btn-sm btn-outline-secondary">+ New Product</a>
     </div>
   </div>
-  
-
-  
-  <div class="table-responsive">
-    <table class="table table-striped table-sm">
-      <thead>
-        <tr>
-
-          <th scope="col">Product's name</th>
-          <th scope="col">Brand</th>
-          <th scope="col">Rom</th>
-          <th scope="col">Price</th>
-          <th scope="col">Created at</th>
-          <th scope="col" class="text-end">Action</th>
-        </tr>
-      </thead>
-  
-      <tbody>
-        <% for (let sp of data) {%>
-          <tr class="align-middle">
-            <td><%= sp.product_name %></td>
-            <td><%= sp.brand_name %></td>
-            <td>5 GB</td>
-            <td><%= sp.max_price.toLocaleString() %> VND</td>
-            <td><%= sp.time.toLocaleString('en') %></td>
-            <td class="text-end">
-  
-              <div class="d-flex flex-row justify-content-end gap-2">
+</div>
 
 
-             
-                <a href="/product/view/<%= sp._id %>" type="button" class="btn btn-primary btn-small">
-                  <i class="bi bi-eye"></i>
-                </a>
-  
-                <a href="/home/product/<%=sp._id%>" type="button" class="btn btn-warning btn-small">
-                  <i class="bi bi-pencil"></i>
-                </a>
-               
-               <div>
-                    <button type="button" class="btn btn-danger btn-small" data-bs-toggle="modal"
-                    data-bs-target="#deleteModal" data-bs-id="<%=sp._id%>"> <i class="bi bi-trash"></i></button>
-                </div>
+
+<div class="table-responsive">
+  <table class="table table-striped table-sm">
+    <thead>
+      <tr>
+
+        <th scope="col">Product's name</th>
+        <th scope="col">Brand</th>
+        <th scope="col">Rom</th>
+        <th scope="col">Price</th>
+        <th scope="col">Created at</th>
+        <th scope="col" class="text-end">Action</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% for (let sp of data) {%>
+        <tr class="align-middle">
+          <td>
+            <%= sp.product_name %>
+          </td>
+          <td>
+            <%= sp.brand_name %>
+          </td>
+          <td>
+            <%= sp.options.roms?sp.options.roms[0]?sp.options.roms[0].size:"Trống":"Trống" %>
+          </td>
+          <td>
+            <%= sp.default_price.toLocaleString() %> - <%= sp.max_price.toLocaleString() %> VND
+          </td>
+          <td>
+            <%= sp.time.toLocaleString('en') %>
+          </td>
+          <td class="text-end">
+
+            <div class="d-flex flex-row justify-content-end gap-2">
+
+
+
+              <a href="/product/view/<%= sp._id %>" type="button" class="btn btn-primary btn-small">
+                <i class="bi bi-eye"></i>
+              </a>
+
+              <a href="/home/product/<%=sp._id%>" type="button" class="btn btn-warning btn-small">
+                <i class="bi bi-pencil"></i>
+              </a>
+
+              <div>
+                <button type="button" class="btn btn-danger btn-small" data-bs-toggle="modal"
+                  data-bs-target="#deleteModal" data-bs-id="<%=sp._id%>"> <i class="bi bi-trash"></i></button>
               </div>
-            </td>
-          </tr>
+            </div>
+          </td>
+        </tr>
         <% } %>
-      </tbody>
-    </table>
-  </div>
+    </tbody>
+  </table>
+</div>
 
 
 <form method="post" name="delete-product-form"></form>
 
 
 <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="modalLabel">Delete Product</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                Confirm product deletion?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Back</button>
-                <button type="button" class="btn btn-primary" id="btn-delete-product">Continue</button>
-            </div>
-        </div>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="modalLabel">Delete Product</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Confirm product deletion?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Back</button>
+        <button type="button" class="btn btn-primary" id="btn-delete-product">Continue</button>
+      </div>
     </div>
+  </div>
 </div>
 
 
 <script>
-    document.addEventListener("DOMContentLoaded", function () {
-        var id_product
-        var deleteForm = document.forms['delete-product-form']
+  document.addEventListener("DOMContentLoaded", function () {
+    var id_product
+    var deleteForm = document.forms['delete-product-form']
 
-        const deleteModal = document.getElementById('deleteModal')
-        deleteModal.addEventListener('show.bs.modal', event => {
-            const button = event.relatedTarget;
-            id_product = button.getAttribute('data-bs-id')
-        })
+    const deleteModal = document.getElementById('deleteModal')
+    deleteModal.addEventListener('show.bs.modal', event => {
+      const button = event.relatedTarget;
+      id_product = button.getAttribute('data-bs-id')
+    })
 
-        var btn_del = document.getElementById('btn-delete-product')
-        btn_del.onclick = function () {
-            deleteForm.action = 'product/delete/' + id_product + "?_method=DELETE"
-            deleteForm.submit()
-        }
-    });
+    var btn_del = document.getElementById('btn-delete-product')
+    btn_del.onclick = function () {
+      deleteForm.action = 'product/delete/' + id_product + "?_method=DELETE"
+      deleteForm.submit()
+    }
+  });
 </script>
