--- a/src/views/product/newProduct.ejs
+++ b/src/views/product/newProduct.ejs
@@ -1,4 +1,7 @@
-<div class="d-flex justify-content-between flex-wrap flex-md nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+
+<div
+  class="d-flex justify-content-between flex-wrap flex-md nowrap align-items-center pt-3 pb-2 mb-3 border-bottom"
+>
   <h1 class="h2">Product</h1>
   <div class="btn-toolbar mb-2 mb-md 0">
     <div class="btn-group me-2">
@@ -12,7 +15,7 @@
     <div class="col">
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/product">Product</a></li>
+          <li class="breadcrumb-item"><a href="/home/product">Product</a></li>
           <li class="breadcrumb-item active">New product</li>
         </ol>
       </nav>
@@ -23,45 +26,41 @@
   </div>
 </div>
 
-<form action="/product/add" method="POST">
-
+<form action="/home/product/add" method="POST">
   <div class="row form-group mb-4">
     <div class="col">
-      <label for="product_type">Chọn loại sản phẩm:</label>
-      <select id="product_type" name="product_type">
-        <option value="Điện thoại">Điện thoại</option>
-        <option value="Phụ kiện">Phụ kiện</option>
-      </select>
-    </div>
-  </div>
-
-  <div class="row form-group mb-4">
-    <div class="col">
-      <label for="product_name">Product name:</label>
-      <input class="form-control" type="text" id="product_name" name="product_name" required>
+        <label for="product_name">Product name:</label>
+        <input class="form-control" type="text" id="product_name" name="product_name" required>
     </div>
   </div>
 
   <div class="row form-group mb-4">
 
     <div class="col">
-      <label for="brand_name">Brand name:</label>
-      <input class="form-control" type="text" id="brand_name" name="brand_name" required>
-
+        <label for="brand_name">Brand name:</label>
+        <input class="form-control" type="text" id="brand_name" name="brand_name" required>
+    
     </div>
   </div>
 
   <div class="row form-group mb-4">
     <div class="col">
-      <label for="percent_discount">Percent_discount:</label>
-      <input class="form-control" type="number" step="1" id="percent_discount" name="percent_discount" value="0"
-        required>
+        <label for="default_price">Default price:</label>
+        <input class="form-control" type="number" step="1000" id="default_price" name="default_price" required>
     </div>
 
   </div>
+  
+  <div class="row form-group mb-4">
+    <div class="col">
+     <label for="percent_discount">percent_discount:</label>
+    <input type="number" step="1" id="percent_discount" name="percent_discount" required value="0">
 
+  </div>
 
+  </div>
   <div class="form-group mb-4">
     <button type="submit" class="btn btn-primary">Add Product</button>
   </div>
 </form>
+
