--- a/src/views/product/viewProduct.ejs
+++ b/src/views/product/viewProduct.ejs
@@ -4,7 +4,7 @@
   </div>
   <div class="btn-toolbar mb-2 mb-md 0">
     <div class="btn-group me-2">
-      <a href="product/new" class="btn btn-sm btn-outline-secondary">+ New Product</a>
+      <a href="/home/product/new" class="btn btn-sm btn-outline-secondary">+ New Product</a>
     </div>
   </div>
 </div>
@@ -18,8 +18,8 @@
 
         <th scope="col">Product's name</th>
         <th scope="col">Brand</th>
-        <th scope="col">Percent discount</th>
-        <th scope="col">Product type</th>
+        <th scope="col">Rom</th>
+        <th scope="col">Price</th>
         <th scope="col">Created at</th>
         <th scope="col" class="text-end">Action</th>
       </tr>
@@ -35,10 +35,10 @@
             <%= sp.brand_name %>
           </td>
           <td>
-            <%= sp.percent_discount %>
+            <%= sp.options.roms?sp.options.roms[0]?sp.options.roms[0].size:"Trống":"Trống" %>
           </td>
           <td>
-            <%= sp.product_type %>
+            <%= sp.default_price.toLocaleString() %> - <%= sp.max_price.toLocaleString() %> VND
           </td>
           <td>
             <%= sp.time.toLocaleString('en') %>
@@ -49,17 +49,12 @@
 
 
 
-              <a href="/product/<%= sp._id %>/variations" type="button" class="btn btn-primary btn-small">
+              <a href="/product/view/<%= sp._id %>" type="button" class="btn btn-primary btn-small">
                 <i class="bi bi-eye"></i>
               </a>
 
-              <a href="/product/update/<%=sp._id%>" type="button" class="btn btn-warning btn-small">
+              <a href="/home/product/<%=sp._id%>" type="button" class="btn btn-warning btn-small">
                 <i class="bi bi-pencil"></i>
-              </a>
-
-
-              <a href="/product/description/<%=sp._id%>" type="button" class="btn btn-warning btn-small">
-                <i class="bi bi-journal"></i>
               </a>
 
               <div>
